--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -154,7 +154,7 @@
     <div class="container">
     
      
-        <% if (add!==null) { %>
+        <% if (adds!==null) { %>
         <% add.forEach(function(adds,index)  {%> 
         <section class="row justify-content-center " style="margin-top: 2em;">
             <div class="col-9 col-sm-8 col-md-8 col-lg-8">
@@ -275,7 +275,7 @@
         <% }) %>
         <% }else{ %>
             <div>
-                hiiiiiiiiiiiiii
+                
             </div>
             <% } %>         
                     <section class="row mt-5 mb-5 justify-content-center">
@@ -303,14 +303,14 @@
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">Name</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="name" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="name" required />
                                                                 </div>
                                                                 </div>
                                                   
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">Phone no</label>
-                                                                  <input type="tel" id="form3Example3" class="form-control" name="mobile" />
+                                                                  <input type="tel" id="form3Example3" class="form-control" name="mobile" required />
                                                                   
                                                                 </div>
                                                               </div>
@@ -319,14 +319,14 @@
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">Pincode</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="pin" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="pin" required minlength="6"/>
                                                                 </div>
                                                                 </div>
                                                   
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">Locality</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="locality" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="locality" required />
                                                                   
                                                                 </div>
                                                               </div>
@@ -334,21 +334,21 @@
             
                                                               <div class="form-group">
                                                                 <label for="exampleInputPassword1">Address</label>
-                                                                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="address" name="addressDetails">
+                                                                <input type="text" class="form-control" id="exampleInputPassword1" placeholder="address" name="addressDetails" required>
                                                               </div>
             
                                                               <div class="row">
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">City</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="district" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="district" required/>
                                                                 </div>
                                                                 </div>
                                                   
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">State</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="state" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="state" required />
                                                                   
                                                                 </div>
                                                               </div>
@@ -357,7 +357,7 @@
                                                                 <div class="col-md-6 mb-4">
                                                                 <div class="form-outline mb-4 text-left">
                                                                   <label class="form-label" for="form3Example3">Landmark</label>
-                                                                  <input type="text" id="form3Example3" class="form-control" name="landmark" />
+                                                                  <input type="text" id="form3Example3" class="form-control" name="landmark"  />
                                                                 </div>
                                                                 </div>
                                                   
