--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -22,11 +22,20 @@
     <!-- Shopping Cart Section Begin -->
     <section class="shopping-cart spad">
         <div class="container">
+          
             <div class="row">
+
                 <div class="col-lg-8">
                     <div class="shopping__cart__table">
+                        <% if(prd.cart.items.length<=0){ %> 
                         <table>
                             <thead>
+                              
+                                    <h1>vellow</h1>
+                                    <% }else{ %>
+                                        
+                                        
+                                    <%prd.cart.items.forEach(function(prd){%>
                                 <tr>
                                     <th>Product</th>
                                     <th>Quantity</th>
@@ -35,7 +44,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <%prd.cart.items.forEach(function(prd){%>
+                              
                                 <tr>
                                     <td class="product__cart__item">
                                         <div class="product__cart__item__pic">
@@ -74,20 +83,15 @@
                                 
 
                             <% }) %>   
-
-
+                            <% } %>
                             </tbody>
                         </table>
+                       
                     </div>
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-6">
                             <div class="continue__btn">
-                                <a href="#">Continue Shopping</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6">
-                            <div class="continue__btn update__btn">
-                                <a href="#"><i class="fa fa-spinner"></i> Update cart</a>
+                                <a href="/shop">Continue Shopping</a>
                             </div>
                         </div>
                     </div>
@@ -103,21 +107,19 @@
                     <div class="cart__total">
                         <h6>Cart total</h6>
                         <ul>
-                            <li>Subtotal <span>$ 169.50</span></li>
+                           
                             <li>Total <span id="total"> <%= prd.cart.totalPrice   %>  </span></li>
                         </ul>
-                        <a href="#" class="primary-btn">Proceed to checkout</a>
+                        <a href="/checkout" class="primary-btn">Proceed to checkout</a>
                     </div>
                 </div>
             </div>
+           
         </div>
     </section>
     <!-- Shopping Cart Section End -->
 <script>
     function changeQuantity(proId,cnt,ct){
-        console.log(proId,55555);
-        console.log(cnt,4444444);
-        console.log(ct,8888888);
         let quantity = document.getElementById(proId).value
         console.log(quantity);
         quantity=parseInt(quantity)
