coupon feature added

--- a/views/admin/add-coupon.ejs
+++ b/views/admin/add-coupon.ejs
@@ -19,7 +19,7 @@
         <input class="form-control mb-3" type="number" name="minPurchase"  placeholder="MinPurchase"
             aria-label="default input example">
             <label for="floatingInput">Expiry Date</label>
-        <input class="form-control mb-3" type="datetime-local" name="expirydate"  placeholder="Date"
+        <input class="form-control mb-3" type="date" name="expirydate"  placeholder="Date"
             aria-label="default input example">
             <button type="submit" class="btn btn-primary mt-4">Submit</button>
 
