--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -497,12 +497,29 @@
                     },
                     success:((response)=>{
                         if(response.access){
-                            Swal.fire(
-                            'Deleted!',
-                            'Your address has been deleted',
-                            'success'
-                        ) 
-                        setTimeout(()=>location.reload(),1000)
+                        //     Swal.fire(
+                        //     'Deleted!',
+                        //     'Your address has been deleted',
+                        //     'success'
+                        // ) 
+                        Swal.fire({
+                                title: 'Are you sure?',
+                                text: "You won't be able to revert this!",
+                                icon: 'warning',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                        if (result.isConfirmed) {
+                                Swal.fire(
+                                'Deleted!',
+                                'Your file has been deleted.',
+                                'success'
+                             )
+                        }
+                    })
+                        setTimeout(()=>location.reload(),3000)
                         }else{
                             console.log(response);
                         }
