profile updation error cleared and order managment tamplate added

--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -163,7 +163,7 @@
                         <i class="bi bi-person-circle" style="font-size: 4em;"></i>
                     </div>
                     <div class="col-9" style="margin-top: 2em;">
-                        <form id="signupForm" action="/profile" method="post" enctype="multipart/form-data ">
+                        <form id="signupForm" action="/profile/<%=userz._id%>" method="post" enctype="multipart/form-data ">
                             <div class="row">
                                 <div class="col-md-6 mb-4">
                                   <div class="form-outline text-left">
