order displayed on admin side

--- a/views/admin/layout/admin header.ejs
+++ b/views/admin/layout/admin header.ejs
@@ -55,6 +55,7 @@
                     <a href="categories" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Category</a>
                     <a href="users" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Users</a>
                     <a href="coupons" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Coupon</a>
+                    <a href="order" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Order</a>
                 </div>
             </nav>
         </div>
