banner template is added

--- a/views/admin/layout/admin header.ejs
+++ b/views/admin/layout/admin header.ejs
@@ -58,9 +58,10 @@
                         <a href="products" class="nav-item nav-link " ><i class="fa fa-laptop me-2"></i>Products</a>
                     </div>
                     <a href="categories" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Category</a>
-                    <a href="users" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Users</a>
-                    <a href="coupons" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Coupon</a>
-                    <a href="order" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Order</a>
+                    <a href="users" class="nav-item nav-link" > <i class="bi bi-person-fill"></i>Users</a>
+                    <a href="coupons" class="nav-item nav-link"><i class="bi bi-card-checklist"></i>Coupon</a>
+                    <a href="order" class="nav-item nav-link"><i class="bi bi-bag"></i>Order</a>
+                    <a href="banner" class="nav-item nav-link"><i class="bi bi-back"></i></i>Banner</a>
                 </div>
             </nav>
         </div>
