category wise listing done in user side

--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -19,7 +19,7 @@
                 aria-label="Floating label select example" name="cat">
                 <option selected>Open this select menu</option>
                 <% categoryList.forEach(function(categoryList){ %>
-                <option value="<%= categoryList._id %> "><%=categoryList.name  %> </option>
+                <option><%=categoryList.name  %> </option>
                 <% }) %> 
             </select>
             <label for="floatingSelect">Categories</label>
