--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -50,39 +50,40 @@
     <!-- Hero Section End -->
 
     <!-- Banner Section Begin -->
+    <%=categories %> 
     <section class="banner spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 offset-lg-4">
                     <div class="banner__item">
                         <div class="banner__item__pic">
-                            <img src="/user/img/banner/banner-1.jpg" alt="">
+                            <img src="/image/productImages/<%=categories[0].image%>" height="400px" alt="">
                         </div>
                         <div class="banner__item__text">
-                            <h2>Clothing Collections 2030</h2>
-                            <a href="#">Shop now</a>
+                            <h2><%=categories[0].name%> collections </h2>
+                            <a href="/productShow/<%=categories[0]._id%>">Shop now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="banner__item banner__item--middle">
                         <div class="banner__item__pic">
-                            <img src="/user/img/banner/banner-2.jpg" alt="">
+                            <img src="/image/productImages/<%=categories[1].image%>" alt="" style="width: 400px;">
                         </div>
                         <div class="banner__item__text">
-                            <h2>Accessories</h2>
-                            <a href="#">Shop now</a>
+                            <h2> <%=categories[1].name%> collections</h2>
+                            <a href="/productShow/<%=categories[1]._id%>">Shop now</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="banner__item banner__item--last">
                         <div class="banner__item__pic">
-                            <img src="/user/img/banner/banner-3.jpg" alt="">
+                            <img src="/image/productImages/<%=categories[2].image%>" height="400px" alt="" style="width: 400px;">
                         </div>
                         <div class="banner__item__text">
-                            <h2>Shoes Spring 2030</h2>
-                            <a href="#">Shop now</a>
+                            <h2><%=categories[2].name%> collections</h2>
+                            <a href="/productShow/<%=categories[2]._id%>">Shop now</a>
                         </div>
                     </div>
                 </div>
