disable feature include in product management

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -19,7 +19,7 @@
                  -->
 
                 <% categoryList.forEach(function(categoryList){ %>
-                <option value="<%= categoryList._id %> "><%=categoryList.name  %> </option>
+                <option selected ><%=categoryList.name%> </option>
                 <% }) %> 
             </select>
             <label for="floatingSelect">Categories</label>
