--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="container ">
-    <div class="row justify-content-center ">
+    <div class="row ">
 <form action="/admin/products" method="post" enctype="multipart/form-data">
 <div class="col-sm-12 col-xl-6 mt-4">
     <div class="bg-secondary rounded h-100 p-4">
@@ -19,7 +19,7 @@
                 aria-label="Floating label select example" name="cat">
                 <option selected>Open this select menu</option>
                 <% categoryList.forEach(function(categoryList){ %>
-                <option><%=categoryList.name  %> </option>
+                <option ><%=categoryList.name  %> </option>
                 <% }) %> 
             </select>
             <label for="floatingSelect">Categories</label>
@@ -42,11 +42,11 @@
             <label for="floatingPassword">Discount</label>
         </div>
 
-        <div class="form-floating mb-3">
+        <!-- <div class="form-floating mb-3">
             <input type="number" class="form-control" id="floatingPassword"
                 placeholder="Pa" name="size">
             <label for="floatingPassword">Size</label>
-        </div>
+        </div> -->
         
         <div class="mb-3">
             <label for="formFile" class="form-label">Upload your Image</label>
