--- a/views/user/catProduct.ejs
+++ b/views/user/catProduct.ejs
@@ -205,6 +205,7 @@
                             </div>
                         </div>
                     </div>
+                    <h1><%= pro %> </h1>
                     <div class="row">
                         <% pro.forEach(function(productList,index){ %> 
                         <div class="col-lg-4 col-md-6 col-sm-6">
